 - Fixed a typo in help set (BugID #42) (F)
 - Fixed a problem with Exclude lists not being saved after a delete (BugID #41) (F)
 - HTTP agent wasn't reporting correct version to website (F)
 - Update segv code (M/F)
 - Cleaned up help text and reformatted help to match the rest of NeoStats (M)
 - Cleaned up old includes of <fnmatch.h> (M)

0.9.4 - Fish - 20 Aug, 2003
 - configure now checks for crypt.h (BugID: 37)
 - fixed bots del command crashing neo when not enough args supplied (BugID: 39)
 - fixed a stupid typo in helpers del command. Missing Nickname param. (BugID: 36)
 - Fixed a Doco typo with monbots command

0.9.3 - Fish - 07 June, 2003
 - Found a few bugs with nickflood detection thanks to the logs from -=OrPhEuS=-
 - added ident and host to akill message in #services chan.
 - Forgot to put in /help set akilltime
 - Kicks are now handled (Fixes that Hu, user isn't a part of xxx messages)
 - Notices are now processed by the bots
 - Check Exempts for PM's and Notices is now performed.
 - Akill times can be set larger than 10,000 seconds now BUGID: 31
 - Disabling Version check didn't actuall disable it. Fixed. BugID: 24
 - Moved is_pub_chan into NeoStats core, as there is more checking than I though. BugID: 33
 - Channel Locking is implemented
 - Added a feature to enable admins to edit the botlist online
 - Added the ability to assign bots to channels, to stay in there full time.
 - SecureServ supports the new API version interface, and __ModInit, __ModFini function calls of NeoStats
 - When a user joins a channel, user exemptions are checked as well as channel exemptions.
 - Helper interface added, and SVSJOIN code now works!
 - send an update when we get a positive to secure.irc-chat.net if we have an account 
 - Helpers are automatically logged out if they go away (configurable)
 - Helpers are automatically logged out if they quit/get killed
 - SecureServ can join the help channel when the first helper logs in